--- a/index.html
+++ b/index.html
@@ -7,10 +7,19 @@
         <h1> Keyly Tavarez </h1>
         <h3> Keyly's Favorite Movie Is </h3>
         <img src="https://sharing.abcactionnews.com/sharelstv/photo/2015/10/30/There_Might_Be_a__Hocus_Pocus__Sequel_0_26002176_ver1.0_900_675.jpg">
-    </body>
+  <h3>Keyly's likes are</h3>
+    <ol>
+    <li>Watching movies</li>
+    <li>listening to her favorite band BTS</li>
+    <li>Expressing her favorite color blue in her clothing</li>
+    </ol>
+     <h2> In 10 years keyly see's herself working in the medical office </h2>
+     </body>
+    
+
+
     
 </html>
- <head>
-    <p>Heres some info </p>
-     </head>
+  
+
 
