--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html>
     <head>
         <title>HireMe.com</title>
+        <link href="https://fonts.googleapis.com/css?family=Poor+Story" rel="stylesheet">
     </head>
     <body>
         <h1> Keyly Tavarez </h1>
+        <p> Information about Keyly</p>
         <h3> Keyly's Favorite Movie Is </h3>
         <img src="https://sharing.abcactionnews.com/sharelstv/photo/2015/10/30/There_Might_Be_a__Hocus_Pocus__Sequel_0_26002176_ver1.0_900_675.jpg">
   <h3>Keyly's likes are</h3>
